Progress with SRM request. Identified function for SRM-COPY. Need to set environment variables.